--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,43 +5,302 @@ on:
     branches:
       - main
     tags:
-      - '*'  # Triggers both builds and tag deployments
+      - 'v*'
+  workflow_dispatch:
 
 jobs:
   build:
-    name: Build and Test
+    name: Build
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Extract version from tag
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+      - name: Setup Dependencies
+        run: |
+          docker run -d --name builder fedora:34 bash -c "tail -f /dev/null"
+          docker exec builder dnf install -y \
+            autoconf \
+            automake \
+            libtool \
+            rpm-build \
+            gcc \
+            rsync \
+            bash \
+            libseccomp-devel \
+            squashfuse-devel \
+            libmnl-devel \
+            libnftnl-devel \
+            libnl3-devel \
+            libcap-devel \
+            fuse3-devel \
+            json-c-devel \
+            python3 \
+            python3-devel \
+            python3-setuptools \
+            python3-lark-parser \
+            python3-sphinx \
+            python3-sphinx_rtd_theme \
+            python3-libsass \
+            python3-requests \
+            python3-pyyaml \
+            python3-jinja2 \
+            python3-wheel \
+            python3-Cython \
+            git
 
-      - name: Login to Docker Hub
+      - name: Build RPM in Container
+        run: |
+          # Copy source to container
+          docker cp . builder:/root/clearly
+          
+          # Determine version and release
+          if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/v}
+            RELEASE=0
+          else
+            VERSION=0.0.0
+            RELEASE=1
+          fi
+
+          # Build RPM inside container
+          docker exec builder bash -c "
+            set -xe
+
+            # Set python to python3.
+            export PYTHON=python3
+
+            # Set up the git repository.
+            git config --global --add safe.directory /root/clearly
+            cd /root/clearly
+
+            # Write version and release to a file.
+            echo \"$VERSION-$RELEASE\" > /root/clearly/VERSION
+
+            # Create the build system.
+            ./autogen.sh
+
+            # Configure the build system.
+            ./configure --prefix=/usr --libdir=/usr/lib
+
+            # Build the distribution tarball.
+            make dist
+            
+            # Build all the targets.
+            make
+            
+            # Find the generated tarball.
+            ORIGINAL_TARBALL=\$(ls clearly-*.tar.gz)
+            
+            # Unpack it to rename the internal directory.
+            tar -xzf \"\$ORIGINAL_TARBALL\"
+            
+            # Find the unpacked directory name.
+            ORIGINAL_DIR=\$(ls -d clearly-*/)
+            
+            # Rename the directory to match the version.
+            mv \"\$ORIGINAL_DIR\" \"clearly-$VERSION\"
+            
+            # Repack the tarball with the correct internal directory name.
+            tar -czf \"clearly-$VERSION.tar.gz\" \"clearly-$VERSION\"
+
+            # Place the new, corrected tarball where rpmbuild can find it.
+            mkdir -p /root/rpmbuild/SOURCES
+            mv \"clearly-$VERSION.tar.gz\" /root/rpmbuild/SOURCES/
+
+            # Create spec file with version and release.
+            sed 's/@VERSION@/$VERSION/g; s/@RELEASE@/$RELEASE/g' packaging/fedora/clearly.spec > clearly.spec
+            
+            # Build the binary and source RPMs.
+            rpmbuild -ba clearly.spec
+          "
+          
+          docker cp builder:/root/rpmbuild/RPMS ./rpms
+          docker cp builder:/root/clearly/doc/html ./html
+
+      - name: Build Container Image
+        run: |
+          cat > Dockerfile << 'EOF'
+          FROM fedora:34
+          
+          # Install the RPMs
+          COPY ./rpms/*.rpm /tmp/
+          RUN dnf install -y /tmp/*.rpm && \
+              dnf clean all && \
+              rm -rf /tmp/*.rpm
+          
+          # Set the default entrypoint
+          ENTRYPOINT ["clearly"]
+          EOF
+
+          docker build -t \
+            ghcr.io/${{ github.repository_owner }}/clearly:latest \
+            .
+
+          docker save \
+            ghcr.io/${{ github.repository_owner }}/clearly:latest \
+            -o ./container/container.tar
+
+      - name: Upload Container Image
+        uses: actions/upload-artifact@v4
+        with:
+          name: container
+          path: ./container
+
+      - name: Upload RPM Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: rpms
+          path: ./rpms
+
+      - name: Upload HTML Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: html
+          path: ./html
+
+  test:
+    name: Test
+    needs: build
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        CLEARLY_TEST_PACK_FMT: [squash-mount, squash-unpack, tar-unpack]
+        CLEARLY_SUDO_YES: [sudo_yes]
+  
+    steps:
+      - name: Download Container Image
+        uses: actions/download-artifact@v4
+        with:
+          name: container
+          path: ./container
+
+      - name: Create Test Script
+        run: |
+          cat > test.bash << 'EOF'
+          #!/bin/bash -xe
+
+          # Run the test suite in directory $1 if conditions are right (see below). Be
+          # aware of build cache populated by prior runs.
+
+          prefox=$1
+          export PATH=$prefox/bin:$PATH
+
+          # Test outside Git WD only if image with cache enabled. If cache disabled,
+          # it’s too slow, and other builders we don’t need to test that hard.
+          if [[ ! (   -e $prefox/.git
+                  && $CLEARLY_TEST_BUILDER = image
+                  && $CLEARLY_IMAGE_CACHE = enabled ) ]]; then
+              exit 0
+          fi
+
+          # Validate configuration.
+          clearly test --is-pedantic all
+          if [[ -n $CLEARLY_SUDO_YES ]]; then
+              clearly test --is-sudo all
+          fi
+
+          # Run test suite.
+          clearly test all
+          # Validate “rootemu” didn’t run (skipped by default in standard scope).
+          [[ $(cat "/tmp/clearly-test.tmp.$(id -un)/rootemu") = no ]]
+
+          # Run rootemu; image with an enabled cache is required. We only really need
+          # to do this once. Since all CI tests that use image with an enabled cache
+          # take roughly the same amount of time, we arbitrarily chose squash-mount as
+          # the pack format.
+          if [[    $CLEARLY_TEST_BULDER == image
+                && $CLEARLY_IMAGE_CACHE = enabled
+                && $CLEARLY_TEST_PACK_FMT = squash-mount ]]; then
+              clearly test rootemu
+              [[ $(cat "/tmp/clearly-test.tmp.$(id -un)/rootemu") = yes ]]
+          fi
+          EOF
+
+      - name: Execute Test
+        run: |
+          docker load -i ./container/container.tar
+
+          docker run \
+            -v /mnt:/mnt \
+            -v $(pwd):/clearly \
+            -e CLEARLY_TEST_BUILDER=image \
+            -e CLEARLY_IMAGE_CACHE=enabled \
+            -e CLEARLY_SUDO_YES=${{ matrix.CLEARLY_SUDO_YES }} \
+            -e CLEARLY_TEST_PACK_FMT=${{ matrix.CLEARLY_TEST_PACK_FMT }} \
+            ghcr.io/${{ github.repository_owner }}/clearly:latest \
+            ./test.bash /clearly
+
+      - name: Upload Report Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: report
+          path: ./clearly
+          retention-days: 7
+
+  publish:
+    name: Publish
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/') 
+    runs-on: ubuntu-latest
+    
+    permissions:
+        pages: write
+        id-token: write
+        contents: read
+
+    steps:
+      - name: Log in to Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Download Container Image
+        uses: actions/download-artifact@v4
         with:
-          install: true
+          name: container
+          path: ./container
 
-      - name: Create Docker Buildx builder
-        run: docker buildx create --use --name mybuilder
-
-      - name: Build and push image
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: docker/build-push-action@v5
+      - name: Download HTML Artifact
+        uses: actions/download-artifact@v4
         with:
-          context: .
-          file: ./test/Dockerfile.metadata
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/clearly:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/clearly:${{ env.VERSION }}
-          platforms: linux/amd64
+          name: html
+          path: ./html
+
+      - name: Download RPM Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rpms
+          path: ./rpms
+
+      - name: Publish to Registry
+        run: |
+          docker load -i ./container/container.tar
+
+          docker tag ghcr.io/${{ github.repository_owner }}/clearly:latest \
+            ghcr.io/${{ github.repository_owner }}/clearly:${{ steps.version.outputs.version }}
+
+          docker push ghcr.io/${{ github.repository_owner }}/clearly:${{ steps.version.outputs.version }}
+          docker push ghcr.io/${{ github.repository_owner }}/clearly:latest
+
+      - name: Publish to Gemfury
+        run: |
+          for rpm in ./rpms/**/*.rpm; do
+            echo "Uploading $rpm to Gemfury..."
+            curl -F package=@$rpm https://${{ secrets.GEMFURY_TOKEN }}@push.fury.io/clearly/
+          done
+
+      - name: Upload to GitHub Pages
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./html
+
+      - name: Publish to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
