Change default Docker entrypoint from 'clearly' to '/bin/bash' in GitHub Actions workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -133,7 +133,7 @@ jobs:
               rm -rf /tmp/*.rpm
           
           # Set the default entrypoint
-          ENTRYPOINT ["clearly"]
+          ENTRYPOINT ["/bin/bash"]
           EOF
 
           docker build -t \
