Update GitHub Actions workflow to set working directory for Docker run, modify documentation title for clarity, and adjust hero component max-width in styles.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -233,6 +233,7 @@ jobs:
           docker load -i ./container/clearly.tar
 
           docker run \
+            -w /clearly \
             -v /mnt:/mnt \
             -v $(pwd):/clearly \
             -e CLEARLY_TEST_BUILDER=image \
