--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -138,7 +138,7 @@ jobs:
           ENTRYPOINT ["/bin/bash"]
 
           # Start the daemon
-          CMD ["-c", "clearly daemon"]
+          CMD ["-c", "clearly daemon --host 0.0.0.0"]
           EOF
 
           mkdir -p ./container
