Improve container lower api

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -11,7 +11,7 @@ mylibdir = $(pkglibdir)
 # shared objects for faster execution.
 
 cython_modules = \
-  _build _build_cache _clearly _executor _filesystem _force _grammar _http _image \
+  _build _build_cache _clearly _filesystem _force _grammar _http _image \
   _irtree _misc _proxy _pull _push _reference _registry _runtime _tree 
 
 cython_c_files = $(cython_modules:%=%.c)
