--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -125,19 +125,24 @@ jobs:
           cat > Dockerfile << 'EOF'
           FROM fedora:34
           
-          # Copy the RPMs
+          # Copy the RPMs.
           COPY rpms/noarch/*.rpm /tmp/
           COPY rpms/x86_64/*.rpm /tmp/
 
-          # Install the RPMs
+          # Install the RPMs.
           RUN dnf install -y /tmp/*.rpm && \
               dnf clean all && \
               rm -rf /tmp/*.rpm
           
-          # Set the entrypoint
+          # Configure the Subnet.
+          RUN sed -i \
+              's/Subnet=10.0.0.0\/8/Subnet=172.16.0.0\/12/' \
+              /etc/clearly/clearly.conf
+          
+          # Set the entrypoint.
           ENTRYPOINT ["/bin/bash"]
 
-          # Start the daemon
+          # Start the daemon.
           CMD ["-c", "clearly daemon --host 0.0.0.0"]
           EOF
 
