--- a/configure.ac
+++ b/configure.ac
@@ -67,13 +67,14 @@ AC_CONFIG_HEADERS([cmd/config.h])
 AC_CONFIG_FILES([Makefile
                  bin/Makefile
                  cmd/Makefile
+                 data/Makefile
                  doc/Makefile
+                 etc/Makefile
                  examples/Makefile
                  lib/Makefile
                  misc/Makefile
                  packaging/Makefile
-                 test/Makefile
-                 static/Makefile])
+                 test/Makefile])
 
 
 ### Options ##################################################################
