Enhance Clearly runtime with WebSocket support and new commands. Added 'list' and 'deploy' commands, updated daemon to handle WebSocket connections, and modified installation requirements to include python3-websockets.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,6 +42,7 @@ jobs:
             python3-devel \
             python3-setuptools \
             python3-lark-parser \
+            python3-websockets \
             python3-sphinx \
             python3-libsass \
             python3-pyyaml \
