--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,15 @@ a.out
 /bin/clearly
 /cmd/check
 /cmd/run
+/cmd/list
 /cmd/image
 /cmd/daemon
+/cmd/deploy
 /cmd/version
+/cmd/list.c
 /cmd/image.c
 /cmd/daemon.c
+/cmd/deploy.c
 /lib/*.c
 /lib/*.so
 /examples/copy/dirCa/symlink-to-dirCb
