--- a/examples/Dockerfile.almalinux_8clearly
+++ b/examples/Dockerfile.almalinux_8clearly
@@ -37,6 +37,7 @@ RUN dnf install -y --setopt=install_weak_deps=false \
                 python3 \
                 python3-devel \
                 python3-lark-parser \
+                python3-websockets \
                 python3-requests \
                 python3-sphinx \
                 rpm-build \
